--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -3,17 +3,48 @@ body{
 }
 
 /* Navbar.css */
-.motion-div {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 0 20px;
-    margin-top: 100px;
-    max-width: 100%;
-    z-index: 20;
+/* Navbar.css */
+
+/* Styles for the motion container */
+.motion-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0 4rem; /* Adjust padding as needed */
+  margin-top: 6rem; /* Adjust margin-top as needed */
 }
+
+/* Styles for the motion div */
+.motion-div {
+  max-width: 600px;
+}
+
+/* Styles for the introductory paragraph */
+.motion-div p {
+  font-size: 1.5rem; /* Adjust font size as needed */
+  color: #666; /* Adjust text color as needed */
+  margin-bottom: 1.5rem; /* Adjust margin bottom as needed */
+}
+
+/* Styles for the primary button */
+.motion-div .button-primary {
+  background-color: #4CAF50; /* Green */
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1rem; /* Adjust font size as needed */
+  border-radius: 5px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.motion-div .button-primary:hover {
+  background-color: #45a049; /* Darker Green */
+}
+
 
 
 .navbar {
@@ -53,5 +84,31 @@ body{
   .navbar ul li a:hover {
     transition: 0.2s;
     color: #392a42; /* Hover color */
+  }
+  
+
+
+
+  .typewriter {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typewriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
   }
   
