--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,5 +8,6 @@
 body{
     height: 100vh;
     background-color: rgb(3, 0, 20);
+    font-family: "Rowdies", sans-serif !important;
 }
 
