--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -22,14 +22,16 @@ body{
 
 /* Styles for the introductory paragraph */
 .motion-div p {
-  font-size: 1.5rem; /* Adjust font size as needed */
+  height: auto;
+  max-width: 450px;
+  font-size: 3rem; /* Adjust font size as needed */
   color: #666; /* Adjust text color as needed */
   margin-bottom: 1.5rem; /* Adjust margin bottom as needed */
 }
 
 /* Styles for the primary button */
 .motion-div .button-primary {
-  background-color: #4CAF50; /* Green */
+  background-color: #00ffef; /* Green */
   color: white;
   padding: 10px 20px;
   text-align: center;
@@ -42,7 +44,7 @@ body{
 }
 
 .motion-div .button-primary:hover {
-  background-color: #45a049; /* Darker Green */
+  background-color: #00ffef; /* Darker Green */
 }
 
 
@@ -64,7 +66,7 @@ body{
 }
 
 .motion-div .button:hover span {
-  background: linear-gradient(135deg, #aefb2a 0%, #57ebde 100% );
+  background: linear-gradient(135deg, #57ebde 0%, #2acefb 100% );
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -77,7 +79,7 @@ body{
   height: 100%;
   left: -110%;
   top: -0%;
-  background: #aefb2a;
+  background: #00ffef;
   pointer-events: none;
   margin: auto;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
@@ -85,7 +87,7 @@ body{
 
 .motion-div .button:hover {
   letter-spacing: 2px;
-  border-image: linear-gradient(135deg, #aefb2a 0%, #57ebde 100% );
+  border-image: linear-gradient(135deg, #57ebde 0%, #2acefb 100% );
   border-image-slice: 1;
 }
 
@@ -139,9 +141,9 @@ body{
   }
   
   .typewriter {
-    color: #fc6a03;
+    color: #00ffef;
     overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid #fc6a03; /* The typewriter cursor */
+    border-right: .15em solid #00ffef; /* The typewriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
@@ -159,6 +161,6 @@ body{
   /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: orange; }
+    50% { border-color: #00ffef; }
   }
   
