--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -32,6 +32,7 @@
     background-color: #ffffff;
     width: 40px;
     height: 40px;
+    padding: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
