--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -101,44 +101,104 @@ body{
 
 
 
+/* Define variables */
+:root {
+  --borderRadius: 10px;
+  --spacer: 1rem;
+  --primary: #00ffef;
+  --text: #6a778e;
+  --linkHeight: calc(var(--spacer) * 3.5);
+  --timing: 250ms;
+}
+
+/* Gooey effect keyframes */
+@keyframes gooeyEffect {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(0.5, 1.5);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+/* Global styles */
+body {
+  background: #eaeef6;
+  font-family: 'Open Sans', sans-serif;
+}
+
+/* Navbar styles */
 .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px 0;
-    background-color: rgba(255, 255, 255, 0); /* Background color with opacity for blur effect */
-    backdrop-filter: blur(10px); /* Apply blur effect to background */
-    z-index: 1000; /* Ensure the navbar is above other content */
-    font-family: 'Arial', sans-serif; /* Custom font */
-  }
-  
-  .navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  .navbar ul li {
-    display: inline-block;
-    margin-right: 20px;
-  }
-  
-  .navbar ul li:last-child {
-    margin-right: 0;
-  }
-  
-  .navbar ul li a {
-    text-decoration: none;
-    color: #faebff; /* Link color */
-    font-size: 18px;
-  }
-  
-  .navbar ul li a:hover {
-    transition: 0.2s;
-    color: #392a42; /* Hover color */
-  }
+  z-index: 9999;
+  position: fixed;
+  top: var(--spacer);
+  left: var(--spacer);
+  background: #fff;
+  border-radius: var(--borderRadius);
+  padding: var(--spacer) 0;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.03);
+  height: calc(100vh - var(--spacer) * 4);
+}
+
+.navbar__link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--linkHeight);
+  width: calc(var(--spacer) * 5.5);
+  color: var(--text);
+  transition: var(--timing) ease all;
+}
+
+.navbar__link span {
+  position: absolute;
+  left: 100%;
+  transform: translate(calc(-1 * var(--spacer) * 3));
+  margin-left: 1rem;
+  opacity: 0;
+  pointer-events: none;
+  color: var(--primary);
+  background: #fff;
+  padding: calc(var(--spacer) * 0.75);
+  transition: var(--timing) ease all;
+  border-radius: calc(var(--borderRadius) * 1.75);
+}
+
+.navbar__link:hover {
+  color: #00ffef;
+}
+
+.navbar:not(:hover) .navbar__link:focus,
+.navbar__link:hover span {
+  opacity: 1;
+  transform: translate(0);
+}
+
+.navbar__item:last-child:before {
+  content: '';
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+  top: 0;
+  left: var(--spacer);
+  width: var(--linkHeight);
+  height: var(--linkHeight);
+  background: var(--primary);
+  border-radius: calc(var(--borderRadius) * 1.75);
+  transition: var(--timing) cubic-bezier(1, 0.2, 0.1, 1.2) all;
+}
+
+/* .navbar__item:hover:before {
+  opacity: 1;
+  animation: gooeyEffect var(--timing) 1;
+} */
+
+
+
   
   .typewriter {
     color: #00ffef;
