--- a/src/CSS/Project.css
+++ b/src/CSS/Project.css
@@ -96,7 +96,7 @@
   .card__button {
     padding: 15px;
     border-radius: 8px;
-    background: #777;
+    background: #252525;
     border: none;
     color: white;
     cursor: pointer;
@@ -104,7 +104,10 @@
   }
   
   .card__button:hover {
-    background: #555;
+    background: #f5f5f5;
+    border: solid #252525 1px;
+    color: #252525;
+    transition: all 0.3s;
   }
   
   .secondary {
@@ -126,3 +129,40 @@
       padding: 15px !important;
     }
 }
+
+
+
+.card__button1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    height: 45px;
+    width: 45px;
+    border: none;
+    border-radius: 10px;
+    background-color: #252525;
+    cursor: pointer;
+    transition: all 0.3s;
+    overflow: hidden;
+  }
+  .bracket {
+    font-size: 18px;
+    transition: all 0.3s;
+    color: rgb(182, 104, 255);
+  }
+  .text_for_button {
+    font-size: 15px;
+    width: 0;
+    transform: scale(0);
+    transition: all 0.3s;
+    color: white;
+  }
+  .card__button1:hover {
+    width: 100px;
+  }
+  .card__button1:hover .text_for_button {
+    transform: scale(1);
+    width: 40px;
+  }
+  
