Added CV downloader

--- a/src/CSS/Buttons.css
+++ b/src/CSS/Buttons.css
@@ -113,3 +113,71 @@
       display: none;
     }
   }
+
+
+
+/* ---------- Download ------------ */
+.newButtonClass {
+  --main-focus: #2d8cf0;
+  --font-color: #323232;
+  --bg-color-sub: #dedede;
+  --bg-color: #eee;
+  --main-color: #323232;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 150px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 2px solid var(--main-color);
+  box-shadow: 4px 4px var(--main-color);
+  background-color: var(--bg-color);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.newButtonClass, .newButtonIconClass, .newButtonTextClass {
+  transition: all 0.3s;
+}
+
+.newButtonClass .newButtonTextClass {
+  transform: translateX(22px);
+  color: var(--font-color);
+  font-weight: 600;
+}
+
+.newButtonClass .newButtonIconClass {
+  position: absolute;
+  transform: translateX(109px);
+  height: 100%;
+  width: 39px;
+  background-color: var(--bg-color-sub);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.newButtonClass .newSvgClass {
+  width: 20px;
+  fill: var(--main-color);
+}
+
+.newButtonClass:hover {
+  background: var(--bg-color);
+}
+
+.newButtonClass:hover .newButtonTextClass {
+  color: transparent;
+}
+
+.newButtonClass:hover .newButtonIconClass {
+  width: 148px;
+  transform: translateX(0);
+}
+
+.newButtonClass:active {
+  transform: translate(3px, 3px);
+  box-shadow: 0px 0px var(--main-color);
+}
