--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -34,20 +34,20 @@ body{
 
 /* Styles for the primary button */
 .motion-div .button-primary {
-  background-color: #00ffef; /* Green */
+  background-color: #00ffef;
   color: white;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 1rem; /* Adjust font size as needed */
+  font-size: 1rem;
   border-radius: 5px;
   transition-duration: 0.4s;
   cursor: pointer;
 }
 
 .motion-div .button-primary:hover {
-  background-color: #00ffef; /* Darker Green */
+  background-color: #00ffef; 
 }
 
 
@@ -66,6 +66,7 @@ body{
   text-transform: uppercase;
   overflow: hidden;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  max-width: 250px;
 }
 
 .motion-div .button:hover span {
