--- a/src/CSS/SocialLinks.css
+++ b/src/CSS/SocialLinks.css
@@ -6,6 +6,7 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 120px !important;
   }
   .example-2 .icon-content {
     margin: 0 10px;
@@ -94,3 +95,9 @@ ul {
     background-color: #ff0000;
   }
   
+
+  @media (max-width: 768px) {
+    .example-2 {
+      padding-left: 0 !important;
+    }
+  }
