--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -113,12 +113,13 @@ button {
 @media (max-width: 480px) {
   .icons {
       grid-template-columns: 1fr;
-      gap: 5px;
+      /* gap: 5px; */
+      gap: 10px;
   }
 
   .icon-box {
-      width: 30px;
-      height: 30px;
+      width: 50px;
+      height: 50px;
       padding: 4px;
   }
 
