--- a/src/CSS/SocialLinks.css
+++ b/src/CSS/SocialLinks.css
@@ -99,5 +99,6 @@ ul {
   @media (max-width: 768px) {
     .example-2 {
       padding-left: 0 !important;
+      padding-bottom: 100px !important;
     }
   }
