--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -373,6 +373,12 @@ body {
 
 
   @media (max-width: 1124px) {
+    .motion-div {
+      align-items: center !important;
+      flex-direction: column !important;
+      display: flex !important;
+  }
+
     .container {
       display: grid !important;
       grid-template-columns: 1fr;
