Fixed Some BUgs

--- a/src/CSS/Buttons.css
+++ b/src/CSS/Buttons.css
@@ -106,6 +106,13 @@
     left: 50%;
     margin-left: 56px;
   }
+
+
+  @media screen and (max-width: 1124px) {
+    .item-hints {
+      display: none;
+    }
+  }
   
 
   @media (max-width: 768px) {
