--- a/src/CSS/Contact.css
+++ b/src/CSS/Contact.css
@@ -21,6 +21,7 @@
     background-color: #fff;
     padding: 32px 24px;
     font-size: 14px;
+    margin-left: 90px;
     font-family: sans-serif;
     color: #212121;
     display: flex;
@@ -59,6 +60,7 @@
   
   .form-container .form-group input,
   .form-container .form-group textarea {
+    resize: none;
     padding: 10px 17px;
     width: 90%;
     border-radius: 6px;
@@ -299,6 +301,7 @@
     }
 
     .form-container{
+      margin: 0px !important;
       max-height: 700px;
       height: 100%;
       overflow-x: scroll;
@@ -340,23 +343,6 @@
   
   .form-group select option {
     color: #333;
-  }
-  
-  .form-group select option:hover {
-    background-color: #c62a2a;
-  }
-  /* Custom arrow styling */
-  .form-group::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 1rem;
-    width: 8px;
-    height: 8px;
-    background-color: #b72323;
-    clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-    transform: translateY(-50%);
-    pointer-events: none;
   }
   
   .form-group select:focus + ::after {
