--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -8,8 +8,6 @@ a{
 }
 
 /* Navbar.css */
-/* Navbar.css */
-
 .container{
   padding-left: 60px;
 }
@@ -422,6 +420,13 @@ body {
   }
   
   @media (max-width: 768px) {
+    .motion-div .button {
+      width: 150px;
+      height: 60px;
+      padding: 0;
+      font-size: 13px;
+    }
+
     .for_center{
       padding-left: 0px !important;
     }
@@ -472,11 +477,15 @@ body {
     .motion-div p,
     .motion-div button {
       width: 100%;
-      margin-top: -50px;
+      /* margin-top: -30px; */
+      margin-bottom: 0;
     }
 
     .motion-div p{
       position: relative;
+      display: flex;
+      flex-direction: column;
+
       text-align: center;
       font-size: 24px;
       height: 100px !important;
@@ -492,5 +501,11 @@ body {
       width: 100%;
       max-width: 250px;
       height: 250px;
+    }
+  }
+
+  @media (max-width: 335px) {
+    .motion-div p{
+      font-size: 18px !important;
     }
   }
