--- a/src/CSS/Project.css
+++ b/src/CSS/Project.css
@@ -54,6 +54,7 @@
   
   .card__content {
     position: absolute;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 100%;
@@ -167,3 +168,20 @@
     width: 40px;
   }
   
+  .used_technologies {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.6); 
+    display: flex;
+    gap: 10px;
+    backdrop-filter: blur(10px); 
+    padding: 10px;
+    font-size: 14px;
+    color: #333;
+    font-weight: bold;
+    border-top: 1px solid rgba(255, 255, 255, 0.3); 
+    border-radius: 0 0 10px 10px; 
+    z-index: 1;
+  }
