--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,6 @@ body{
     height: 100vh;
     background-color: rgb(3, 0, 20);
     font-family: "Rowdies", sans-serif !important;
+    font-display: swap;
 }
 
