--- a/src/CSS/Project.css
+++ b/src/CSS/Project.css
@@ -29,6 +29,7 @@
   .card {
     position: relative;
     height: auto;
+    /* height: 230px; */
     width: 100%;
     padding-bottom: 20px;
     aspect-ratio: 16/9;
@@ -124,8 +125,6 @@
   }
   
 
-
-
 @media (max-width: 768px) {
     .projects-container {
       padding: 15px !important;
@@ -184,4 +183,18 @@
     border-top: 1px solid rgba(255, 255, 255, 0.3); 
     border-radius: 0 0 10px 10px; 
     z-index: 1;
+  }
+
+
+  @media (max-width: 480px) {
+    .projects-grid{
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+    .card__content{
+      padding: 10px;
+    }
+    .card {
+      background-size: cover;
+      height: 210px;
+    }
   }
